tests/error/modifier_errors/flags_nested_control_dagger.err
Error: Unitary constraint violation (at $FILE:15:12)
   | 
13 |     with control(ctrl):
14 |         with dagger:
15 |             foo(q)
   |             ^^^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
